# mm_diff_ik

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
mm/: CMakeLists.txt  package.xml
mm_control/: CMakeLists.txt  package.xml  setup.py
mm_control/config/: calibration_configs.yaml  home.yaml
mm_control/include/mm_control/: control.h  trajectory.h
mm_control/launch/: bringup.launch  home.launch  onboard_bringup_full.launch  ur10.launch
mm_control/scripts/: base_cmd.py  calibrate.py  collect_calibration_data.py  home.py
mm_control/src/: control.cpp
mm_control/src/cartesian/: control.cpp  diffik.cpp  mpc.cpp  point.cpp  spline.cpp  trajectory.cpp
mm_control/src/joint/: control.cpp  pd.cpp  pid.cpp  point.cpp  spline.cpp  trajectory.cpp
mm_control/src/mm_control/: control.py
mm_control/src/nodes/: diff_ik.cpp  home.cpp  joint_control.cpp  joint_state_mux.cpp  joint_state_mux_node.cpp  mpc.cpp
mm_data_analysis/: CMakeLists.txt  package.xml  setup.py
mm_data_analysis/scripts/: bags  calc_base_speed.py  calc_pose_rmse.py  force.py  joints.py  mi.py  obstacles.py  plot_compliance.py  plot_draw.py  plot_dyn_obs.py  plot_dyn_obs2.py  plot_final.py  plot_force.py  plot_force_kf.py  plot_force_vs_position.py  plot_joints.py  plot_mi.py  plot_obstacles.py  plot_pose.py  plot_pose_error.py  plot_push.py  plot_regulation.py  plot_slalom.py  plot_slalom_video.py  pose.py  record.sh
mm_data_analysis/scripts/calc/: analyse_freakout.py  analyse_msgs.py  calc_e_u_stats.py  calc_manipulability.py  calc_mi.py  calc_pose_rmse.py  calc_pose_rmse2.py  calc_u_rms.py
mm_data_analysis/scripts/plot/: compare_robotiq_ur_wrench.py  plot_arm_values.py  plot_base_cmd.py  plot_base_vicon.py  plot_ee_vel.py  plot_force.py  plot_joints.py  plot_manipulability.py  plot_mi_fancy.py  plot_obj_val.py  plot_pose.py  plot_pose_actual.py  plot_pose_desired.py  plot_push.py  plot_scan.py
mm_data_analysis/scripts/record/: record.sh  record_force.sh  record_hgp_data.sh  record_vicon.sh
mm_data_analysis/src/mm_data_analysis/: manipulability.py  plot.py  util.py
mm_data_analysis/test/: test_rms.py
mm_force_control/: CMakeLists.txt  package.xml  setup.py
mm_force_control/include/mm_force_control/: bias_estimator.h  control.h
mm_force_control/launch/: force.launch  force_control.launch
mm_force_control/scripts/: force.py  force_control.py  gripper.py  human_interaction_demo.py  logger.py  mm_force_control.py  parallel_force_control.py  replay.sh  set_desired_force.py  set_desired_force_intervals.py  simple.py  spoof.py  test_optimize_srv.py  wrench.py
mm_force_control/scripts/data-tools/: record.sh
mm_force_control/scripts/old/: redundancy_force_control_demo.py
mm_force_control/src/: mm_force_control.cpp
mm_force_control/src/mm_force_control/: __init__.py  bias.py  pid.py  util.py
mm_force_torque/: CMakeLists.txt  package.xml  setup.py
mm_force_torque/scripts/: set_desired_force_intervals.py  simulate_ft_sensor.py  spoof.py  wrench.py
mm_force_torque/src/mm_force_torque/: bias.py  filter.py  util.py
mm_kinematics/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
mm_kinematics/include/mm_kinematics/: conversion.h  kinematics.h  spatial.h
mm_kinematics/scripts/: dJdq.cpp  generate_all.sh  generate_dJdq_cpp.py  generate_dJdq_python.py  generate_jacobian_cpp.py  generate_kinematics_python.py  interact.py  jac.py  jac.txt  jacobian.py  jacobians-generated.cpp  jacobians.cpp  manipulability_derivative.py  maximize_manipulability.py  maximize_mi.py  mi_derivative.py  profile.py  rot_jac.txt  sym_mi.py  test.py  test_new_kin.py  write_rot_jacs.py  write_sym_jac.py
mm_kinematics/src/: ad_test.cpp  kinematics.cpp
mm_kinematics/src/autogenerated/: README.md  jacobians.cpp  kinematics.pkl
mm_kinematics/src/mm_kinematics/: __init__.py  codegen.py  kinematics.py  kinematics2.py  symbolic.py  thing_kinematics.py  util.py
mm_kinematics/test/: test_kinematics.cpp  test_kinematics.py  test_manipulability.cpp
mm_lidar/: CMakeLists.txt  package.xml  setup.py
mm_lidar/scripts/: publish_obstacles.py  view_detections.py
mm_lidar/src/mm_lidar/: __init__.py  extract.py  util.py
mm_math_util/: CMakeLists.txt  package.xml  setup.py
mm_math_util/include/mm_math_util/: differentiation.h  filter.h  interp.h  linalg.h  rotation.h  wrap.h
mm_math_util/src/mm_math_util/: __init__.py
mm_math_util/test/: test_differentiation.cpp  test_interp.cpp  test_wrap.cpp
mm_motion_control/: CMakeLists.txt  package.xml
mm_motion_control/include/mm/: control.h  interp.h  kinematics.h  mm.h  optimize.h
mm_motion_control/launch/: bringup.launch  home.launch  mm_motion_control.launch  onboard.launch  onboard_bringup_full.launch
mm_motion_control/scripts/: base_cmd.py  obstacles.py
mm_motion_control/src/: control.cpp  home.cpp  interp.cpp  joint_state_mux.cpp  mm_control_node.cpp  pose_error.cpp  pose_error_jac.cpp  test.cpp
mm_motion_control/test/: test_interp.cpp  test_kinematics.cpp  test_optimize.cpp
mm_msgs/: CMakeLists.txt  package.xml  setup.py
mm_msgs/msg/: CartesianControllerInfo.msg  CartesianControllerState.msg  CartesianState.msg  CartesianTrajectoryPoint.msg  ForceControlState.msg  ForceInfo.msg  JointControllerInfo.msg  Obstacle.msg  Obstacles.msg  OptimizationState.msg  PoseControlState.msg  PoseTrajectory.msg  PoseTrajectoryPoint.msg  WrenchInfo.msg
mm_msgs/src/: conversions.cpp
mm_optimization/: CMakeLists.txt  package.xml
mm_optimization/src/: qpoases.cpp
mm_simulation/: CMakeLists.txt  kinematics.py  package.xml  sim.py  sim_robot.py  test_traj.py  visualization.py
mm_simulation/launch/: sim.launch
mm_simulation/scripts/: sim_robot.py  visualization.py
mm_vicon/: CMakeLists.txt  package.xml
mm_vicon/launch/: ke-base-params.xml  sim.launch  spoof.launch  vicon.launch
mm_vicon/scripts/: align_base_vicon.py  angle_planes.py  echo_marker.py  obstacle_detection.py  obstacle_detection_sim.py  parse_bag.py  vicon_ee_pub_sim.py
mm_vicon/src/: estimator.cpp  filter.cpp  real.cpp  sim.cpp
mm_vicon/src/estimator/: real.cpp  (+1 more)
(+148 files in other folders)
