<?xml version="1.0"?>
<package format="2">
  <name>mm_control</name>
  <version>0.0.0</version>
  <description>Control for the UTIAS mobile manipulator.</description>

  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <author>Adam Heins</author>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>mm_kinematics</depend>
  <depend>mm_msgs</depend>
  <depend>mm_math_util</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
