<?xml version="1.0"?>
<package format="2">
  <name>mm_force_control</name>
  <version>0.0.0</version>
  <description>Force control for mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>mm_kinematics</exec_depend>
  <exec_depend>mm_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
