<?xml version="1.0"?>
<package format="2">
  <name>mm_force_torque</name>
  <version>0.0.0</version>
  <description>Force/torque utilities for the Thing mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>mm_kinematics</depend>
  <depend>mm_msgs</depend>
  <depend>mm_math_util</depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
