<?xml version="1.0"?>
<package format="2">
  <name>mm_kinematics</name>
  <version>0.0.0</version>
  <description>Kinematics for the Thing mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>

  <!-- Runtime dependencies. -->
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-sympy</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
