<?xml version="1.0"?>
<package format="2">
  <name>mm_lidar</name>
  <version>0.0.0</version>
  <description>Tools for working with the Hukoyu lidar on the mobile base.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
