<?xml version="1.0"?>
<package format="2">
  <name>mm_math_util</name>
  <version>0.0.0</version>
  <description>Math utility code to support the mobile manipulator project.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
