<?xml version="1.0"?>
<package format="2">
  <name>mm_motion_control</name>
  <version>0.0.0</version>
  <description>Motion control for the mobile manipulator. </description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>mm_msgs</depend>  <!-- TODO there are more message deps -->
  <depend>mm_kinematics</depend>
  <depend>mm_math_util</depend>
  <depend>mm_optimization</depend>
  <depend>mm_control</depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
