<?xml version="1.0"?>
<package format="2">
  <name>mm_msgs</name>
  <version>0.0.0</version>
  <description>Messages for mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
