<?xml version="1.0"?>
<package format="2">
  <name>mm_msgs</name>
  <version>0.0.0</version>
  <description>Messages for mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>rospy</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
