<?xml version="1.0"?>
<package format="2">
  <name>mm_vicon</name>
  <version>0.0.0</version>
  <description>Vicon utilities for the mobile manipulator.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>mm_math_util</depend>
  <depend>vicon_bridge</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
